# AgCloud

./: .dockerignore  .gitignore  README.md  conf_sweep_y8n.csv  conf_sweep_y8s.csv  count_pos.py  docker-compose.yml  main.py  metrics.py  pytest.ini  requirements.txt  roi_sweep_y8n.csv  roi_sweep_y8n_overlap030.csv  sanity_qt.py  test_GUI  vectordb-1.md
GUI/: generate_protos.py  pyproject.toml  requirements.txt
GUI/grafana/dashboards/: sensors.json
GUI/grafana/provisioning/dashboards/: dashboards.yaml
GUI/prometheus/: prometheus.yml
GUI/src/vast/auth_ui/: models.py  widgets.py
GUI/src/vast/desktop/: Dockerfile  start.sh
GUI/src/vast/dsl/: binops.py  ir.py  runtime.py
GUI/src/vast/gateway/: .dockerignore  Dockerfile
GUI/src/vast/orthophoto_canvas/geo/: tiling.py
GUI/src/vast/orthophoto_canvas/utils/: geometry.py
GUI/src/vast/runner/: .dockerignore  Dockerfile
GUI/src/vast/services/: Dockerfile
GUI/src/vast/views/: notification_view.py  sound_view.py
GUI/src/vast/views/assets/: zones.geojson
airflow_bundle/leaf-pipeline/projects/disease-monitor/disease-monitor/: .dockerignore  .gitignore  docker-compose.yml  pyproject.toml  requirements.txt
airflow_bundle/leaf-pipeline/projects/disease-monitor/disease-monitor/src/disease_monitor/: logging_utils.py  models.py
airflow_bundle/leaf-pipeline/projects/disease-monitor/disease-monitor/src/disease_monitor/notifiers/: base.py  slack.py  (+1 more)
airflow_bundle/leaf-pipeline/projects/disease-monitor/disease-monitor/tests/: conftest.py  test_aggregation.py  test_anomaly_rules.py  test_worsening_rules.py
(+1031 files in other folders)
